# ES_project_userspace

./: README.md  Readme_HLS  flattentest.py
AI_training/: ai_training.py  layer_1_weights.txt  layer_2_weights.txt  layer_3_weights.txt
HLS_IPs/HLS_IP/: nn.cpp  (+2 more)
bare_metal_tests/: bare_metal_test.c  bare_metal_test_only_dma.c
userspace/ros_node/image_subscriber/: CMakeLists.txt  package.xml
userspace/ros_node/image_subscriber/src/: image_subscriber.cpp
vhdl/: component.xml  nn_inference.vhd  nn_inference_fp_input_img_V.vhd  nn_inference_layer2_weights_V_0.vhd  nn_inference_layer2_weights_V_1.vhd  nn_inference_layer2_weights_V_10.vhd  nn_inference_layer2_weights_V_11.vhd  nn_inference_layer2_weights_V_12.vhd  nn_inference_layer2_weights_V_13.vhd  nn_inference_layer2_weights_V_14.vhd  nn_inference_layer2_weights_V_15.vhd  nn_inference_layer2_weights_V_16.vhd  nn_inference_layer2_weights_V_17.vhd  nn_inference_layer2_weights_V_18.vhd  nn_inference_layer2_weights_V_19.vhd  nn_inference_layer2_weights_V_2.vhd  nn_inference_layer2_weights_V_20.vhd  nn_inference_layer2_weights_V_21.vhd  nn_inference_layer2_weights_V_22.vhd  nn_inference_layer2_weights_V_23.vhd  nn_inference_layer2_weights_V_24.vhd  nn_inference_layer2_weights_V_25.vhd  nn_inference_layer2_weights_V_26.vhd  nn_inference_layer2_weights_V_27.vhd  nn_inference_layer2_weights_V_28.vhd  nn_inference_layer2_weights_V_29.vhd  nn_inference_layer2_weights_V_3.vhd  nn_inference_layer2_weights_V_30.vhd  nn_inference_layer2_weights_V_31.vhd  nn_inference_layer2_weights_V_4.vhd  nn_inference_layer2_weights_V_5.vhd  (+28 more)
(+16 files in other folders)
